@@ -9,13 +9,35 @@ public class Product {
     private double price;
     private int stockQuantity;
 
-    public Product(int productId, String name, double price, int stockQuantity) throws InvalidInputException {
-        setProductId(productId);
-        setName(name);
-        setPrice(price);
-        setStockQuantity(stockQuantity);
+    // ===== MAIN CONSTRUCTOR (with ID) =====
+    public Product(int productId, String name, double price, int stockQuantity)
+            throws InvalidInputException {
+
+        if (productId <= 0)
+            throw new InvalidInputException("Product ID must be positive: " + productId);
+        if (name == null || name.isBlank())
+            throw new InvalidInputException("Product name cannot be empty");
+        if (price <= 0)
+            throw new InvalidInputException("Price must be positive");
+        if (stockQuantity < 0)
+            throw new InvalidInputException("Stock quantity cannot be negative");
+
+        this.productId = productId;
+        this.name = name;
+        this.price = price;
+        this.stockQuantity = stockQuantity;
     }
 
+    // ===== DB CONSTRUCTOR (NO ID) ✅ =====
+    // DB-де product_id = SERIAL → ID-ны PostgreSQL өзі қояды
+    public Product(String name, double price, int stockQuantity)
+            throws InvalidInputException {
+
+        // id=1 тек validation-нан өту үшін
+        this(1, name, price, stockQuantity);
+    }
+
+    // ===== GETTERS =====
     public int getProductId() {
         return productId;
     }
@@ -32,39 +54,32 @@ public class Product {
         return stockQuantity;
     }
 
-    public void setProductId(int productId) throws InvalidInputException {
-        if (productId <= 0) throw new InvalidInputException("product ID must be positive: " + productId);
-        this.productId = productId;}
-
+    // ===== SETTERS (optional) =====
     public void setName(String name) throws InvalidInputException {
-        if (name == null || name.trim().isEmpty()) throw new InvalidInputException("Product name cannot be empty");
-        this.name = name.trim();
+        if (name == null || name.isBlank())
+            throw new InvalidInputException("Product name cannot be empty");
+        this.name = name;
     }
 
     public void setPrice(double price) throws InvalidInputException {
-        if (price < 0) throw new InvalidInputException("Price cannot be negative: " + price);
+        if (price <= 0)
+            throw new InvalidInputException("Price must be positive");
         this.price = price;
     }
 
     public void setStockQuantity(int stockQuantity) throws InvalidInputException {
-        if (stockQuantity < 0) throw new InvalidInputException("Stock cannot be negative: " + stockQuantity);
+        if (stockQuantity < 0)
+            throw new InvalidInputException("Stock quantity cannot be negative");
         this.stockQuantity = stockQuantity;
-    }
-
-    public boolean isInStock() {
-        return stockQuantity > 0;
-    }
-
-    public void restock(int amount) throws InvalidInputException {
-        if (amount <= 0) throw new InvalidInputException("Restock amount must be positive: " + amount);
-        stockQuantity += amount;
     }
 
     @Override
     public String toString() {
-        return "Product{id=" + productId +
+        return "Product{" +
+                "id=" + productId +
                 ", name='" + name + '\'' +
                 ", price=" + price +
-                ", stock=" + stockQuantity + '}';
+                ", stock=" + stockQuantity +
+                '}';
     }
 }
